# Attendance-system-using-cnn

./: README.md  next.config.js  package.json
app/: globals.css  layout.tsx  page.tsx
app/(dashboard)/dataset/: page.tsx
app/(dashboard)/docs/: page.tsx
app/(dashboard)/subjects/: page.tsx
app/attendance/: page.tsx
app/erp/: page.tsx
app/recognition/: page.tsx
app/students/: page.tsx
app/upload/: page.tsx
backend/: attendance.db  config.yaml  main.py  pyproject.toml  requirements.txt  utils.py
components/: footer.tsx  navbar.tsx
lib/: api.ts  utils.ts
